--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -45,4 +45,4 @@ li a {
 li a:hover,
 .active {
   background-color: #333;
-}
+} */
